Release History
***************

1.3.0 (unreleased)
==================

- Use zc.buildout's download API. As this allows MD5 checking, added the
  md5sum and patch-md5sum options.


1.2.0 (2009-05-18)
==================

Enabled using a shared directory for completed builds.

1.1.6 (2009-03-17)
==================

Moved 'zc' package from root of checkout into 'src', to prevent testrunner
from finding eggs installed locally by buildout.

Removed deprecations under Python 2.6.

1.1.5 (2008-11-07)
==================

Added to the README.txt file a link to the SVN repository, so that Setuptools
can automatically find the development version when asked to install the
"-dev" version of zc.recipe.cmmi.

Bugs Fixed
----------

Applied fix for bug #261367 i.e. changed open() of file being downloaded to
binary, so that errors like the following no longer occur under Windows.

  uncompress = self.decompress.decompress(buf)
  error: Error -3 while decompressing: invalid distance too far back

1.1.4 (2008-06-25)
==================

Add support to autogen configure files.

1.1.3 (2008-06-03)
==================

Add support for updating the environment.

1.1.2 (2008-02-28)
==================

Bugs Fixed
----------

Check if the `location` folder exists before creating it.

After 1.1.0
===========

Added support for patches to be downloaded from a url rather than only using
patches on the filesystem

1.1.0
=====

Added support for:

 - download-cache: downloaded files are cached in the 'cmmi' subdirectory of
   the cache cache keys are hashes of the url that the file was downloaded from
   cache information recorded in the cache.ini file within each directory

 - offline mode: cmmi will not go online if the package is not in the cache

 - variable location: build files other than in the parts directory if required

 - additional logging/output

1.0.2 (2007-06-03)
==================

Added support for patches.

Bugs Fixed
----------

Tests fixed (buildout's output changed)
